Fix #450 - scrollbars in FAB and Minimal

--- a/themes/minimal/css-1.7.0/style.css
+++ b/themes/minimal/css-1.7.0/style.css
@@ -2386,7 +2386,7 @@ dd .deletelink {
 	padding-bottom: 0;
 	margin-bottom: 0;
 	width: 98%;
-	overflow: auto;
+	overflow: visible;
 }
 
 [dir=rtl] #tabs {
